--- a/koopeteria-api/src/main/resources/application.properties
+++ b/koopeteria-api/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=koopeteria-api
+
+server.port=8082
+
+# ========== DATABASE CONFIG ==========
+spring.datasource.url=jdbc:postgresql://localhost/koopeteria
+spring.datasource.username=postgres
+spring.datasource.password=roginand
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ========== JPA / HIBERNATE CONFIG ==========
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
